增加iview;增加玩家列表

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>html5-ui</title>
+    <link rel="stylesheet" href="https://static.cloume.com/ncee/css/iview.css">
   </head>
   <body>
     <div id="app"></div>
